--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -157,8 +157,8 @@
 //    $("footer > div").css("min-height", $(document).height());
     var global = {};
     var local = "http://localhost/";
-//            var servidor = "http://www.heroesandkillers.com/";
-    var servidor = "http://hak.oscargardiazabal.com/";
+//  var servidor = "http://www.heroesandkillers.com/";
+    var servidor = "http://hak.gardiazabal.tk/";
     var url = servidor + "game/";
     var conectado = false;
     var petAjax = [];
