--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -415,10 +415,9 @@
     function hideFooterEvent() {
         setTimeout(function() {
             console.log(55)
-            $(document).one("click.footer tap.footer", function() {
+            $(document).one("click tap", function() {
                 console.log(66)
                 $("footer").css("left", -($("footer > div").width() + 1) + "px");
-                $(document).off(".footer");
             });
         }, 1);
     }
