--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -65,7 +65,7 @@
             <div>Reaccion: <span id="reaccion"></span></div>
 
             <div style="height:100px">
-                <canvas id="aspecto" height="300px" width="200px"></canvas>
+                <canvas id="aspecto" height="300" width="200"></canvas>
             </div>
             <!--                <div><span id="param"></span></div>-->
         </div>
