--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -5,7 +5,7 @@
 <link rel='stylesheet' href='../styles/index_mob.css'>
 <link rel='stylesheet' href='../styles/images.css'>
 
-<script type="text/javascript" src="../../hak_static/libs/requirejs/require.js"></script>  
+<script type="text/javascript" src="../libs/requirejs/require.js"></script>  
 <script type="text/javascript" src="../js/jquery.mobile.touch.min.js"></script>        
 <script type="text/javascript" src="../js/plugins/jquery.hammer.min.js"></script>
 
