--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -161,10 +161,10 @@
         }
     });
 
-    var libs = [
-        "jquery",
-        org + "js/easeljs-0.6.0.min.js",
-    ];
+//    var libs = [
+//        "jquery",
+//        org + "js/easeljs-0.6.0.min.js"
+//    ];
 
     var commons = [
         org + "js/easeljs-0.6.1.min.js",
@@ -173,15 +173,15 @@
         org + "js/base.js",
         org + "js/ajax.js",
         org + "js/ajax_mob.js",
-
-        org + "../js/jquery-ui-1.10.2/ui/minified/jquery-ui.min.js",
-
-        org + "../js/Filter.js",
-        org + "../js/ColorFilter.js",
-        org + "../js/FilteredSprite.js",
-
-        org + "../js/plugins/jquery.ba-outside-events.min.js",
-        org + "../js/plugins/jquery.sortElements.js",
+        //
+        org + "js/jquery-ui-1.10.2/ui/minified/jquery-ui.min.js",
+        //
+        org + "js/Filter.js",
+        org + "js/ColorFilter.js",
+        org + "js/FilteredSprite.js",
+        //
+        org + "js/plugins/jquery.ba-outside-events.min.js",
+        org + "js/plugins/jquery.sortElements.js",
     ];
 
 //    $("footer > div").css("min-height", $(document).height());
