--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -6,8 +6,8 @@
 <link rel='stylesheet' href='../styles/images.css'>
 
 <script type="text/javascript" src="../libs/requirejs/require.js"></script>  
-<script type="text/javascript" src="../js/jquery.mobile.touch.min.js"></script>        
-<script type="text/javascript" src="../js/plugins/jquery.hammer.min.js"></script>
+<!--<script type="text/javascript" src="../js/jquery.mobile.touch.min.js"></script>        
+<script type="text/javascript" src="../js/plugins/jquery.hammer.min.js"></script>-->
 
 <div id="pantalla"></div>
 <script type="text/javascript">
