--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -401,7 +401,7 @@
             });
             $("#iconoContacto").on("click", function () {
                 global.contactoId = global.perfil.id;
-                cargar('contacto')
+                cargar('contacto');
             });
 
             //footer
