--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -79,8 +79,8 @@
     batalla.grupos = {};
     batalla.imagenes = [];
     batalla.imagenesObj = {};
-
-    var batallaJSON = global.batallas;
+    
+    //var batallaJSON = global.batallas;
 
     mostrarDatos();
     centrarGameArea();
