--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -337,19 +337,16 @@
 
                 for (var i = 0; i < equipos.length; i++) {
                     var id = equipos[i].id;
-                    var raza = batalla.criaturas[id].raza;
-                    if (raza === "duende")
-                        raza = "goblin";
-                    var clase = batalla.criaturas[id].clase;
-                    if("especial" == clase){
-                        clase = "mago";
-                    }
+                    var raza = batalla.criaturas[id].raza;                    
+                    var clase = batalla.criaturas[id].clase;                    
+                    var string = razaClase(raza + clase); //use for repair
+                    
                     $.ajax({
-                        url: '../img/sprites/' + raza + clase + '.js',
+                        url: '../img/sprites/' + string + '.js',
                         async: false,
                         dataType: "script"
                     });
-                    var src = '../img/sprites/' + raza + clase + '.png';
+                    var src = '../img/sprites/' + string + '.png';
                     imagenes[imagenes.length] = src;
                 }
                 loadImagenes(imagenes, function () {
