--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -246,6 +246,7 @@
                 moveGameArea(gameCanvas, top, cambio, "top");
             }
         }).on("scoll, pinchin, pinchout", function (e) {
+            console.log("zoom");
             var scale = e.gesture.scale;
             gameCanvas.width(gameCanvas.width() * scale);
             gameCanvas.height(gameCanvas.height() * scale);
