--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -261,6 +261,7 @@
             var diff = 1 - scale;
             var diffX = diff * (e.pageX / $(document).width());
             var diffY = diff * (e.pageY / $(document).height());
+            console.log(diffX + " " + diffY);
             var left = parseInt(gameCanvas.css("left")) + diffX;
             var top = parseInt(gameCanvas.css("top")) + diffY;
             gameCanvas.width(gameCanvas.width() * scale);
