--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -278,11 +278,14 @@
 
     }
 
+    $("#gameArea > div").css("background-size", "180px");
+    $("#container > canvas").css("background-size", "100px");
+    $("#container > canvas").css("border-width", "100px");
     function reescale(scale) {
         var area = parseInt($("#gameArea > div").css("background-size"));
-        $("#gameArea > div").css("background-size", area * scale + "%");
+        $("#gameArea > div").css("background-size", area * scale + "px");
         var background = parseInt($("#gameArea > div").css("background-size"));
-        $("#container > canvas").css("background-size", background * scale + "%");
+        $("#container > canvas").css("background-size", background * scale + "px");
         var border = parseInt($("#gameArea > div").css("background-size"));
         $("#container > canvas").css("border-width", border * scale + "px");
     }
